--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <header class="navbar">
       <div class="title">🌤️ Weather<span style="color: #4ca1af">App</span></div>
       <div class="search">
-        <input type="text" placeholder="Rechercher une ville..." />
+        <input
+          type="text"
+          placeholder="Rechercher une ville..."
+          id="input_city"
+        />
         <span class="search_div">
           <i class="fa-solid fa-magnifying-glass"></i>
         </span>
