--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           placeholder="Rechercher une ville..."
           id="input_city"
         />
-        <span class="search_div">
+        <span class="search_div disabled">
           <i class="fa-solid fa-magnifying-glass"></i>
         </span>
       </div>
@@ -42,12 +42,12 @@
     <section class="now">
       <div class="now_left">
         <div class="right_header">
-          <div class="country green">Triolet, Pamplemousses, Mauritius</div>
+          <div class="country green"></div>
         </div>
         <div class="weather">
           <div class="weather_icon">
             <img
-              src="https://canizalesjd.github.io/weather-app/assets/icons/night/116.svg"
+              src=""
               alt=""
               style="width: 10rem"
             />
@@ -55,7 +55,7 @@
           <div class="weather_temp text_align_center">
             <div class="weather_temp_number">
               <div class="weather_temp_number_left">
-                22<span class="celsius">°</span>
+                <span class="celsius">°</span>
               </div>
               <div class="weather_temp_number_right">
                 <div class="temp_min">
@@ -70,7 +70,7 @@
                       fill="currentColor"
                     ></path>
                   </svg>
-                  <span>16°</span>
+                  <span class="temp_min_value">16°</span>
                 </div>
                 <div class="temp_max">
                   <svg
@@ -85,7 +85,7 @@
                     ></path>
                   </svg>
 
-                  <span>25°</span>
+                  <span class="temp_max_value">25°</span>
                 </div>
               </div>
             </div>
