--- a/index.html
+++ b/index.html
@@ -1,90 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="/css/normalize.css" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet" />
+    <title>Weather API</title>
+  </head>
 
-  <title>Weather API</title>
-</head>
-
-<body>
-  <!-- NAVBAR -->
-  <header class="navbar">
-    <div class="title">🌤️ Weather<span style="color: #4ca1af">App</span></div>
-    <div class="search">
-      <input type="text" placeholder="Rechercher une ville..." id="input_city" />
-      <span class="search_div disabled">
-        <i class="fa-solid fa-magnifying-glass"></i>
-      </span>
+  <body>
+    <div class="loader-wrapper">
+      <div class="loader"></div>
     </div>
-  </header>
-
-  <section class="now">
-    <div class="now_left">
-      <div class="left_header">
-        <div class="country green"></div>
+    <!-- NAVBAR -->
+    <header class="navbar">
+      <div class="title">🌤️ Weather<span style="color: #4ca1af">App</span></div>
+      <div class="search">
+        <input
+          type="text"
+          placeholder="Rechercher une ville..."
+          id="input_city"
+        />
+        <span class="search_div disabled">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </span>
       </div>
-      <div class="weather">
-        <div class="weather_icon">
-          <img src="" alt="" style="width: 10rem" />
-        </div>
-        <div class="weather_temp text_align_center">
-          <div class="weather_temp_number">
-            <div class="weather_temp_number_left">
-              <span class="celsius">°</span>
-            </div>
-            <div class="weather_temp_number_right">
-              <div class="temp_min">
-                <svg color="#4ca1af" fill="currentColor" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M19.72 13.7a1 1 0 00-1.43-1.4L13 17.67V4a1 1 0 10-2 0v13.66L5.72 12.3a1 1 0 00-1.43 1.4l6.82 6.93c.5.5 1.3.5 1.78 0l6.83-6.93z"
-                    fill="currentColor"></path>
-                </svg>
-                <span class="temp_min_value">16°</span>
-              </div>
-              <div class="temp_max">
-                <svg color="#4ca1af" fill="currentColor" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M4.28 10.3a1 1 0 001.43 1.4L11 6.33V20a1 1 0 102 0V6.33l5.28 5.37a1 1 0 001.43-1.4l-6.82-6.93c-.5-.5-1.3-.5-1.78 0L4.28 10.3z"
-                    fill="currentColor"></path>
-                </svg>
+    </header>
 
-                <span class="temp_max_value">25°</span>
+    <section class="now">
+      <div class="now_left">
+        <div class="left_header">
+          <div class="country green"></div>
+        </div>
+        <div class="weather">
+          <div class="weather_icon">
+            <img src="" alt="" style="width: 10rem" />
+          </div>
+          <div class="weather_temp text_align_center">
+            <div class="weather_temp_number">
+              <div class="weather_temp_number_left">
+                <span class="celsius">°</span>
               </div>
+              <div class="weather_temp_number_right">
+                <div class="temp_min">
+                  <svg
+                    color="#4ca1af"
+                    fill="currentColor"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M19.72 13.7a1 1 0 00-1.43-1.4L13 17.67V4a1 1 0 10-2 0v13.66L5.72 12.3a1 1 0 00-1.43 1.4l6.82 6.93c.5.5 1.3.5 1.78 0l6.83-6.93z"
+                      fill="currentColor"
+                    ></path>
+                  </svg>
+                  <span class="temp_min_value">16°</span>
+                </div>
+                <div class="temp_max">
+                  <svg
+                    color="#4ca1af"
+                    fill="currentColor"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M4.28 10.3a1 1 0 001.43 1.4L11 6.33V20a1 1 0 102 0V6.33l5.28 5.37a1 1 0 001.43-1.4l-6.82-6.93c-.5-.5-1.3-.5-1.78 0L4.28 10.3z"
+                      fill="currentColor"
+                    ></path>
+                  </svg>
+
+                  <span class="temp_max_value">25°</span>
+                </div>
+              </div>
+            </div>
+            <div class="weather_temp_conditions">Partly cloudy</div>
+          </div>
+        </div>
+        <div class="conditions">
+          <div class="conditions_title">
+            <div class="green">
+              <i class="fa-solid fa-cloud-sun"></i> Weather Conditions
             </div>
           </div>
-          <div class="weather_temp_conditions">Partly cloudy</div>
+          <div class="conditions_list"></div>
+        </div>
+        <div class="daily_forecast">
+          <div class="daily_forecast_title">
+            <div class="green">
+              <i class="fa-solid fa-calendar-week"></i> Upcoming days
+            </div>
+          </div>
+          <div class="daily_forecast_list"></div>
         </div>
       </div>
-      <div class="daily_forecast">
-        <div class="daily_forecast_title">
-          <div class="green"><i class="fa-solid fa-calendar-week"></i> Upcoming days</div>
-        </div>
-        <div class="daily_forecast_list">
-
+      <div class="now_right">
+        <div class="hourly_forecast" style="width: 100%">
+          <div class="hourly_forecast_title">Hourly Forecast</div>
+          <div class="hourly_forecast_list"></div>
         </div>
       </div>
-    </div>
-    <div class="now_right">
-      <div class="date">Friday 2025-08-01</div>
-      <div class="hourly_forecast" style="width: 100%;">
-        <div class="hourly_forecast_title">Hourly Forecast</div>
-        <div class="hourly_forecast_list">
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <script type="module" src="/js/api.js"></script>
-</body>
-
+    <script type="module" src="/js/loader.js"></script>
+    <script type="module" src="/js/api.js"></script>
+  </body>
 </html>
