--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -117,7 +117,7 @@
       </div>
     </section>
 
-    <script type="module" src="/js/loader.js"></script>
-    <script type="module" src="/js/api.js"></script>
+    <script type="module" src="js/loader.js"></script>
+    <script type="module" src="js/api.js"></script>
   </body>
 </html>
